--- a/ws3/student/scholarship.html
+++ b/ws3/student/scholarship.html
@@ -1,14 +1,34 @@
-{% extends 'basic.html' %}
+{% extends 'student\base.html' %}
 
-{% block title %} Important Notice {% endblock %}
-{% block home %} active {% endblock %}
+{% block title %} Scholarship {% endblock %}
 
 {% block css %}
 {% endblock %}
-{% block body %}
-<div class="container mt-2">
-
-<h6 style="margin-top: 2rem;">{{forloop.counter}}] {{details.name}}</h6>
+{% block main %}
+<div class="jumbotron">
+    <h1 class="display-4">{{scholarship.name}}</h1>
+    <p class="lead">Deadline:{{scholarship.openingtime}}-{{scholarship.closingtime}}</p>
+    <p>
+    Elgible Castes<br>
+    {%for c in scholarship.caste%}
+    <h5>{{c}}</h5>
+    <br> 
+    {% endfor %}
+    </p>
+    <p>
+        Elgible Branches<br>
+        {%for c in scholarship.branch%}
+        <h5>{{c}}</h5>
+        <br> 
+        {%endfor%}
+    </p>
+    
+    <hr class="my-4">
+      {% if elgibility %}
+      <a class="btn btn-primary btn-lg" href="/application_form/{{scholarship.id}}" role="button">Apply</a>
+      {% endif %}
+    </p>
+  </div>
 
 </div>
 {% endblock %}
