--- a/ws3/student/admin.html
+++ b/ws3/student/admin.html
@@ -26,6 +26,9 @@
               <li class="nav-item active">
                 <a class="nav-link" href="/rejected_applications/">Rejected<span class="sr-only">(current)</span></a>
               </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="/add/">Add<span class="sr-only">(current)</span></a>
+              </li>
 
               <li class="nav-item active">
                 <a class="nav-link" href="/logout/">Logout <span class="sr-only">(current)</span></a>
