Styled some pages

--- a/ws3/student/rejected_applications.html
+++ b/ws3/student/rejected_applications.html
@@ -23,7 +23,7 @@
         }
     </style>
     {% endblock %}
-    {% block body %}
+    {% block main %}
     <h1 class="mt-4">All Rejected Applications List</h1>
     <div class="users-table mt-4">
     <table>
