--- a/ws3/student/approved_applications.html
+++ b/ws3/student/approved_applications.html
@@ -24,7 +24,7 @@
         }
     </style>
     {% endblock %}
-    {% block body %}
+    {% block main %}
     <h1 class="mt-4">All Approved Applications List</h1>
     <div class="users-table mt-4">
     <table>
