--- a/ws3/student/status.html
+++ b/ws3/student/status.html
@@ -1,4 +1,7 @@
+{% extends 'student\base.html' %}
 
+
+{% block main %}
 {% for app in application %}
 <div class="container w-50 mt-4 shadow">
     <h3>Your application for {{app.scholarship.name}} is {{app.Application_Status}}</h3>
@@ -8,3 +11,4 @@
     
 </div>
 {% endfor %}
+{%endblock%}
